--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.application.name=seller-service
 #PostgreSQL
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/marketplace
+spring.datasource.url=jdbc:postgresql://postgres.postgresql:5432/marketplace
 spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
+
+management.otlp.metrics.export.url=http://jaeger.jaeger:14268
